tests/baselines/reference/crashIntypeCheckInvocationExpression.errors.txt
==== tests/cases/compiler/crashIntypeCheckInvocationExpression.ts (4 errors) ====
    var nake;
    function doCompile<P0, P1, P2>(fileset: P0, moduleType: P1) {
    
        return undefined;
    }
    export var compileServer = task<number, number, any>(<P0, P1, P2>() => {
                               ~~~~
!!! error TS2304: Cannot find name 'task'.
    
        var folder = path.join(),
                     ~~~~
!!! error TS2304: Cannot find name 'path'.
            fileset = nake.fileSetSync<number, number, any>(folder)
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
      return doCompile<number, number, any>(fileset, moduleType);
                                                     ~~~~~~~~~~
!!! error TS2304: Cannot find name 'moduleType'.
    });
    